--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>CHILDHOOD</title>
     <link rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,469;1,14..32,469&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,150;1,150&display=swap" rel="stylesheet">
 
     <style>
@@ -105,9 +106,9 @@
         p {
             text-align: justify; 
             color: #000000;
-            font-weight: 120;
-            font-family: Verdana;
-            line-height: 1.6; 
+            font-weight: 20;
+            font-family: "Inter", sans-serif;
+            line-height: 1.9; 
             font-size: 15px;
             margin: 30px;
             text-indent: 70px;
